2007-09-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.h, src/plugindata.h, src/plugins.c:
   Apply patch from blackdog to add build_info and
   msgwindow->compiler_add() to the plugin API (thanks).
 * src/symbols.c, tagmanager/haxe.c:
   Apply code from blackdog to parse Haxe typedef tags (thanks).
   Show Haxe typedefs in the symbol list.
   Add tag_type treeview iter.
 * tagmanager/haxe.c:
   Show Haxe enum types in the symbol list.
 * src/msgwindow.c, src/msgwindow.h, src/search.c:
   Add foreground colouring to messages items.


2007-09-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/callbacks.c:
   Speed up Save All for C-like files by avoiding unnecessary
   recolourising after user typenames have changed.
 * src/keybindings.c, src/document.c, doc/geany.txt, doc/geany.html:
   Change scroll by line default keybindings to Alt-{Up, Down}.
   Change Previous/Next Paragraph Scintilla commands to Ctrl-{Up, Down}.
   Adding Shift extends selection by paragraph.
 * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html:
   Add Find keybinding (re-uses existing string).
   Group search-related callbacks together.
   Docs: Add table headings to group related keybindings together.
 * src/keybindings.c:
   Make some keybinding titles use existing string capitalization.
 * src/images.c:
   Apply patch from Christoph Berg to update main window icon and
   About dialog icon (thanks).


2007-09-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h:
   Fix return type for document->open_file().
   (Tidy up field name indentation).
 * doc/geany.txt, doc/geany.html:
   Apply patch from John Gabriele for an overview in the Tags section
   (thanks).
   (Format paragraph with fmt -w72).
 * src/keyfile.c, src/editor.c, src/editor.h, doc/geany.txt,
   doc/geany.html:
   Allow autocompletion on a line with trailing whitespace.
   Add auto_complete_whilst_editing hidden preference.